--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Solution
+name: Build and Test Solution
 
 on:
   push:
@@ -41,3 +41,15 @@ jobs:
       # Add additional options to the MSBuild command line here (like platform or verbosity level).
       # See https://docs.microsoft.com/visualstudio/msbuild/msbuild-command-line-reference
       run: msbuild /m /p:Configuration=${{env.BUILD_CONFIGURATION}} ${{env.SOLUTION_FILE_PATH}}
+      
+    - name: Test
+      working-directory: ${{env.GITHUB_WORKSPACE}}
+      run: |
+        $xunit = '~/.nuget/packages/xunit.runner.console/2.4.1/tools/net472/xunit.console.exe'
+        $testFiles = Get-ChildItem -recurse -include xunit*.dll | `
+          ForEach-Object { $_.directory.fullname } | `
+          Get-ChildItem | `
+          Where-Object { $_ -like '*tests.dll' } | `
+          Select-Object -Unique FullName | `
+          ForEach-Object { $_.FullName }
+        & $xunit @testFiles
